# architectures_m1_project

./: .gitignore  CMakeLists.txt  README.md  main.c  main.sh  main_cuda.cu  main_openmp.c  project.sbatch
data/: 100_1000_0.in  100_1000_1.in  100_1000_2.in  50_200_0.in  50_200_1.in  50_200_2.in  5_10_0.in  5_10_1.in  5_10_2.in  README.md  data_0.in  data_1.in  data_2.in
data/infoarena_processed/: grader_test1.in  grader_test10.in  grader_test11.in  grader_test12.in  grader_test13.in  grader_test14.in  grader_test16.in  grader_test17.in  grader_test19.in  grader_test2.in  grader_test20.in  grader_test3.in  grader_test4.in  grader_test5.in  grader_test6.in  grader_test7.in  grader_test8.in  grader_test9.in
src/: bellman_ford.c  bellman_ford.h  cu_bellman_ford.cu  cu_bellman_ford.cuh  data_generator.py  graph_file_reader.c  graph_file_reader.h  graph_structs.h  infoarena_convertor.py  tester.c  tester.h  timing.c  timing.h  utils.c  utils.h
